--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Berix Project</title>
+    <link rel="icon" href="%PUBLIC_URL%/berix.png" />
+    <title>Berixllc</title>
   </head>
   <body>
     <div id="root"></div>
 
     <div className="image-row">
-        <img src="/Images/image1.jpg" alt="Indoor skydive 1" />
-        <img src="/Images/image2.jpg" alt="Indoor skydive 2" />
+        <img src="/Images/image1.jpg" alt="" />
+        <img src="/Images/image2.jpg" alt="" />
     </div>
     
   </body>
